--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 2 chrome version",
+      "last 2 firefox version",
+      "last 2 safari version",
+      "last 2 Edge versions",
+      "ie 11"
     ]
   }
 }
