--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "downshift": "^3.4.1",
     "lodash.identity": "^3.0.0",
     "lodash.includes": "^4.3.0",
     "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
     "lodash.pickby": "^4.6.0",
+    "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.2",
     "react": "^16.9.0",
+    "react-cropper": "^1.3.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-select": "^3.0.8",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
     "redux-saga": "^1.0.5",
